<resources>
    <string name="app_name">手机号码归属地</string>
    <string name="main_input_phone">请输入你的手机号码</string>
    <string name="send_button">查询</string>
    <string name="about_author">关于作者 / About Author</string>
    <string name="gs_type">归属运营商：</string>
    <string name="province">省份：</string>
    <string name="type">运营商：</string>
    <string name="phone">手机号码：</string>
    <string name="title_activity_main2">关于我们</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="author_licoy">Author/作者 : 憧憬Licoy</string>
    <string name="blog_https_www_licoy_cn">Blog/博客 : https://www.licoy.cn</string>
    <string name="github">访问Github</string>
    <string name="go_blog">访问博客</string>
    <string name="issue">BUG反馈</string>
</resources>
