<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.licoy.phonequery.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:hint="@string/main_input_phone"
        android:maxLines="1"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="#fff"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="303dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/phone"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:id="@+id/result_phone" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/type"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/result_province"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/result_type"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/province"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/result_phone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/result_province" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/gs_type"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/result_type"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/result_gs_type" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:text="@string/about_author"
            android:textColor="#fff" />
    </RelativeLayout>

</LinearLayout>
